Fix text-align

--- a/src/stylesheets/pages/_blog.scss
+++ b/src/stylesheets/pages/_blog.scss
@@ -7,6 +7,10 @@
   }
 }
 
+.post-detail {
+  text-align: justify;
+}
+
 .blog-area {
   a:after,
   a:before {
